--- a/src/components/TodoListItem.scss
+++ b/src/components/TodoListItem.scss
@@ -1,3 +1,11 @@
+.TodoListItem-virtualized {
+  & +& {
+    border-top: 1px solid #adb5bd;
+  }
+  &:nth-child(even) {
+    background-color: #f8f9fa;
+  }
+}
 .TodoListItem {
   padding: 1rem;
   display: flex;
